added about and squad page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="middle">
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Squad</a></li>
+            <li><a href="./pages/about.html">About</a></li>
+            <li><a href="./pages/squad.html">Squad</a></li>
             <li><a href="#">Trophies</a></li>
           </ul>
         </div>
