added player card

--- a/pages/squad.html
+++ b/pages/squad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Manchester United</title>
-    <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/squad.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -102,6 +102,58 @@
           </div>
         </div>
       </section>
+
+      <div class="content-section">
+        <div class="player-category">
+          <ul>
+            <li><a href="" id="active-player">men</a></li>
+            <li><a href="">women</a></li>
+            <li><a href="">under-21s</a></li>
+            <li><a href="">under-18s</a></li>
+            <li><a href="">Legends</a></li>
+          </ul>
+        </div>
+        <h1 class="heading">GoalKeepers</h1>
+        <hr />
+        <div class="goalkeeper">
+          <div class="goalkeeper-card">
+            <a href="../players/DavidDeGea.html">
+              <img
+                src="https://assets.manutd.com/AssetPicker/images/0/0/16/247/1111858/Player_Profile_Thumbnail_Mens_2223_Kit_DDG1658217243086_large.jpg"
+                alt=""
+              />
+            </a>
+            <div class="goalkeeper-info">
+              <p>1</p>
+              <h2>David De Gea</h2>
+            </div>
+          </div>
+          <div class="goalkeeper-card">
+            <a href="../players/DavidDeGea.html">
+              <img
+                src="https://assets.manutd.com/AssetPicker/images/0/0/18/41/1190337/PlayerProfile_Thumbnail_TOM_HEATON1675364113582_large.jpg"
+                alt=""
+              />
+            </a>
+            <div class="goalkeeper-info">
+              <p>22</p>
+              <h2>Tom Heaton</h2>
+            </div>
+          </div>
+          <div class="goalkeeper-card">
+            <a href="../players/DavidDeGea.html">
+              <img
+                src="https://assets.manutd.com/AssetPicker/images/0/0/16/247/1111862/Player_Profile_Thumbnail_Mens_2223_Kit_Henderson1658217650614_large.jpg"
+                alt=""
+              />
+            </a>
+            <div class="goalkeeper-info">
+              <p>26</p>
+              <h2>Tom Heaton</h2>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="../script.js"></script>
   </body>
